Add optional in-browser player thanks to HTML5
Pity the player widget doesn't align, and is rather wonky in general.

--- a/default.yaml
+++ b/default.yaml
@@ -9,3 +9,4 @@
 :contact: mailto:your@mail.address
 :stream_playlist: http://link.to/playlist.m3u
 :stream_direct: http://direct.stream/url
+:stream_widget: false # you need to set stream_direct above for this to work
