--- a/default.yaml
+++ b/default.yaml
@@ -16,3 +16,4 @@
 :stream_format: audio/ogg
 :info_title: Help
 :info_text: Some text # you need to set info_title above too for this to work
+:counter: false # show online users counter
